compatibility with java 8